--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  font-family: 'Merriweather', serif;
+  font-family: 'Lato','Merriweather', serif;
   -webkit-hyphens: auto;
   hyphens: auto;
 }
