--- a/css/fonts.css
+++ b/css/fonts.css
@@ -87,3 +87,8 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Noto Sans KR';
+  src: url('https://fonts.googleapis.com/css?family=Noto+Sans+KR')
+}
