--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  font-family: 'Noto Sans KR','Merriweather', serif;
+  font-family: 'sans-serif','Merriweather', serif;
   -webkit-hyphens: auto;
   hyphens: auto;
 }
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family:'Noto Sans KR', 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #222;
 }
 
