--- a/css/fonts.css
+++ b/css/fonts.css
@@ -87,3 +87,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Nanum-Gothic';
+  src: 
+  local('Nanum-Gothic'),
+  url('../fonts/Nanum-Gothic.ttf') format('ttf');
+}
