--- a/css/fonts.css
+++ b/css/fonts.css
@@ -91,6 +91,6 @@
 @font-face {
   font-family: 'Nanum-Gothic';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   src: url('../fonts/Nanum-Gothic.ttf') format('truetype');
 }
