--- a/css/main.css
+++ b/css/main.css
@@ -24,13 +24,12 @@ h6 {
 pre,
 code {
   font-family: 'Roboto Mono', monospace;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 code {
   border-radius: 3px;
   padding: 1px 3px;
-  background: #f0f0f0;
   -webkit-hyphens: none;
   hyphens: none;
 }
@@ -39,14 +38,14 @@ pre {
   overflow-x: auto;
   padding: 8px 12px;
   border-radius: 3px;
-  background: #202020;
-  color: #d0d0d0;
+  background: transparent;
+  color: transparent;
 }
 
 pre code {
   padding: initial;
   background: transparent;
-}
+} 
 
 a:hover,
 a:active {
@@ -452,7 +451,7 @@ blockquote {
 
   pre,
   code {
-    font-size: 17px;
+    font-size: 12px;
   }
 
   .header {
