--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ blockquote {
 
   .content {
     font-size: 15px;
-    line-height: 1.8;
+    /* line-height: 1.8; */
     margin: 100px auto;
   }
 
