--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,16 @@ body {
 }
 
 h1,
-h2,
+h2 {
+  font-family: 'Lato', sans-serif;
+  color: #222;
+}
+
 h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lato', sans-serif;
+  font-family:'Nanum-Gothic', 'Lato', sans-serif;
   color: #222;
 }
 
@@ -260,7 +264,7 @@ blockquote {
   padding: 3px 0;
   text-decoration: none;
   font-size: 17px;
-  font-family: 'Lato', sans-serif;
+  font-family:'Nanum-Gothic', 'Lato', sans-serif;
   font-weight: bold;
   color: #222;
   border-bottom: 1px solid #ddd;
