--- a/css/main.css
+++ b/css/main.css
@@ -331,14 +331,14 @@ blockquote {
   font-family: 'Nanum-Gothic', 'Lato', sans-serif;
   font-weight: bold;
   color: #222;
-  transition: color 300ms;
+  transition: color 200ms;
 }
 
 .tag-cloud-item a:hover,
 .tag-cloud-item a:active,
 .category-item a:hover,
 .category-item a:active {
-   color: #ccc;
+   color: #c994f5;
 }
 
 .footer {
