--- a/css/main.css
+++ b/css/main.css
@@ -130,12 +130,12 @@ blockquote {
 .content {
   display: block;
   min-height: calc(100vh - 60px);
-  max-width: 800px;
+  max-width: 700px;
   margin: 60px auto 80px;
   padding: 0 15px;
   font-size: 16px;
   line-height: 1.6;
-  color: #555;
+  color: #2f2f2f;
 }
 
 .article-title {
@@ -174,6 +174,28 @@ blockquote {
   overflow: hidden;
   border: none;
   background: #e8e8e8;
+}
+
+.article-content h1 {
+  font-size: 2.0em;
+  font-family: 'Nanum-Gothic', 'Lato', sans-serif;
+  margin-block-end: 0.5em;
+}
+
+.article-content h2, h3, h4 {
+  margin-block-end: 0.1em;
+}
+
+.article-content h2 {
+  font-size: 1.8em;
+}
+
+.article-content h3 {
+  font-size: 1.5em;
+}
+
+.article-content h4 {
+  font-size: 1.2em;
 }
 
 .article-taxonomy {
