--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,12 @@ mark {
   background-color: #ECD6FF;
 }
 
+footnote {
+  font-style: italic;
+  font-size: 15px;
+  color: #777;
+}
+
 blockquote {
   border-left: 5px solid #ccc;
   background: #f5f5f5;
@@ -499,7 +505,7 @@ blockquote {
   }
 
   .content {
-    font-size: 17px;
+    font-size: 18px;
     /* line-height: 1.8; */
     margin: 100px auto;
   }
