--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ nav.main-nav a.cta {
 a, #title, #post-list a:hover, #title:hover {
     text-decoration: none;
     color: #5badf0;
-    color: #c5c5c5;
+    color: #7e7f80;
 }
 
 p a {
@@ -349,7 +349,7 @@ em, i {
 .post h2 {
     margin-top: 20px;
     margin-bottom: 10px;
-    font: 300 24px/1.5 'Nanum-Gothic', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: bold 24px/1.5 'Nanum-Gothic', "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #111;
 }
 
@@ -371,6 +371,10 @@ em, i {
     letter-spacing: 2px;
     margin-top: 5px;
     display: block;
+}
+
+.post h3 {
+    font-weight: bold;
 }
 
 #post-list h2 {
