--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ html, body {
 
 body {
     font: 16px/1 'Nanum-Gothic', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #000;
+    color: #37352F;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
@@ -252,7 +252,7 @@ nav.main-nav a.cta {
 a, #title, #post-list a:hover, #title:hover {
     text-decoration: none;
     color: #5badf0;
-    color: #797979;
+    color: #37352f60;
 }
 
 p a {
@@ -375,6 +375,11 @@ em, i {
 
 .post h3 {
     font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.post h4, h5 {
+    margin-bottom: 5px;
 }
 
 #post-list h2 {
